[package]
name = "async-tus"
version = "0.1.0"
edition = "2018"
authors = ["Peter Farr <Peter@PrismaPhonic.com>", "Kevin Welch <kaedub16@gmail.com>"]
description = "async implementation of TUS"
repository = "https://github.com/libellis/async-tus"
license = "MIT"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
url = "2.1.1"
tokio = { version = "0.2.20", features = ["full"] }

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.1.0"
